fix(footer/logo): fix spacing in footer logo (#17)
fixed the spacing in the footer logo. Becaue the logo was not in a contaier, the spacing was off

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -262,6 +262,11 @@ footer {
 	background-color: var(--blue-100);
 }
 
+footer > .logo > .anchor-footer  {
+	height: 15px;
+	width: 15px;
+}
+
 @media screen and (max-width: 768px) {
 	* {
 		color: var(--white);
@@ -289,8 +294,8 @@ footer {
 	}
 
 	nav > .logo > .anchor {
-		height: 20px;
-		width: 20px;
+		height: 18px;
+		width: 18px;
 	}
 
 	#home {
